--- a/web/home.html
+++ b/web/home.html
@@ -15,10 +15,18 @@
 				<p>Hello. I am Samuel Despain, and I am a resident of sunny Gilbert, Arizona. I have not lived there my whole life, though. I had the privilege of living in different climates in different parts of the world.</p>
 				<p>I was born in Provo, Utah, when my parents were students at BYU. During the first part of my childhood, my family had moved around between Arizona, Colorado, and even Spain.</p>
 				<p>We settled in Colorado until the end of my freshman year of high school, after which we moved to Arizona where the family currently resides.</p>
+				<p>Mere weeks after graduating high school, I embarked on a full-time proselyting mission. I spent the first twelve weeks in the Arizona Tempe Mission, after which I was called to the Oregon Eugene Mission.</p>
+				<p>Upon returning home, I began attending BYU-Idaho. A couple of years into college, I began dating a lovely, virtuous young woman named Edith. When I proposed to her, she agreed to be my bride.</p>
 			</div>
 		</div>
 		<div class="dropdown">
-			<h2>Family</h2>
+			<h2>My family</h2>
+			<div class="contents">
+				<p>My famiy consists of my father and mother, myself, my younger brothers Isaac and Ethan, and my little sister Elena.</p>
+				<p>Both my parents served in the Spain Bilbao Mission and studied at BYU. My mother earned a master's degree at Colorado State University.</p>
+				<p>Isaac served in the Germany Berlin Mission, is currently studying at BYU-Idaho, and is married to a wonderful red-head named Bailey.</p>
+				<p>Ethan recently returned from the Washington Kennewick Mission and is now studying at BYU.</p>
+				<p>Elena is the only child in our family to have been home-schooled. She became a Young Woman at the start of the Church's new youth program.</p>
 		</div>
 	</body>
 </html>
