--- a/web/home.html
+++ b/web/home.html
@@ -10,7 +10,7 @@
 		</div>
 		<img class="me" src="20181222_234249790_iOS.jpg"/>
 		<div class="dropdown">
-			<h2>About me</h2>
+			<button class="dropButton">About me</button>
 			<div class="contents">
 				<p>Hello. I am Samuel Despain, and I am a resident of sunny Gilbert, Arizona. I have not lived there my whole life, though. I had the privilege of living in different climates in different parts of the world.</p>
 				<p>I was born in Provo, Utah, when my parents were students at BYU. During the first part of my childhood, my family had moved around between Arizona, Colorado, and even Spain.</p>
@@ -20,13 +20,15 @@
 			</div>
 		</div>
 		<div class="dropdown">
-			<h2>My family</h2>
+			<button class="dropButton">My family</button>
 			<div class="contents">
 				<p>My famiy consists of my father and mother, myself, my younger brothers Isaac and Ethan, and my little sister Elena.</p>
 				<p>Both my parents served in the Spain Bilbao Mission and studied at BYU. My mother earned a master's degree at Colorado State University.</p>
 				<p>Isaac served in the Germany Berlin Mission, is currently studying at BYU-Idaho, and is married to a wonderful red-head named Bailey.</p>
 				<p>Ethan recently returned from the Washington Kennewick Mission and is now studying at BYU.</p>
 				<p>Elena is the only child in our family to have been home-schooled. She became a Young Woman at the start of the Church's new youth program.</p>
+			</div>
 		</div>
+		<script src="home.js"></script>
 	</body>
 </html>
