added continents functionality

--- a/web/teamActivity03.html
+++ b/web/teamActivity03.html
@@ -6,8 +6,8 @@
 	<body>
 		<form action="teamActivity03.php" method="post">
 			<div>
-				<p>Name: <input type="text" name="name" value="<?php echo $name; ?>"></p>
-				<p>Email: <input type="email" name="emailAddress" value="<?php echo $email; ?>"></p>
+				<p>Name: <input type="text" name="name"></p>
+				<p>Email: <input type="email" name="emailAddress"></p>
 			</div>
 			<div>
 				<p>Major: 
@@ -18,7 +18,7 @@
 				</p>
 			</div>
 			<div>
-				<p>Comments: <input type="textarea" name="comments" value="<?php echo $comments; ?>"></p>
+				<p>Comments: <input type="textarea" name="comments"></p>
 			</div>
 			<div>
 				<p>What continents have you ever visited?
