--- a/web/teamActivity03.html
+++ b/web/teamActivity03.html
@@ -22,17 +22,17 @@
 			</div>
 			<div>
 				<p>What continents have you ever visited?
-					<p><input type="checkbox" name="continents" value="North America">North America</p>
-					<p><input type="checkbox" name="continents" value="South America">South America</p>
-					<p><input type="checkbox" name="continents" value="Europe">Europe</p>
-					<p><input type="checkbox" name="continents" value="Asia">Asia</p>
-					<p><input type="checkbox" name="continents" value="Australia">Australia</p>
-					<p><input type="checkbox" name="continents" value="Africa">Africa</p>
-					<p><input type="checkbox" name="continents" value="Antarctica">Antarctica</p>
+					<p><input type="checkbox" name="continents[]" value="North America">North America</p>
+					<p><input type="checkbox" name="continents[]" value="South America">South America</p>
+					<p><input type="checkbox" name="continents[]" value="Europe">Europe</p>
+					<p><input type="checkbox" name="continents[]" value="Asia">Asia</p>
+					<p><input type="checkbox" name="continents[]" value="Australia">Australia</p>
+					<p><input type="checkbox" name="continents[]" value="Africa">Africa</p>
+					<p><input type="checkbox" name="continents[]" value="Antarctica">Antarctica</p>
 				</p>
 			</div>
 			<div>
-				<p><input type="submit"></p>
+				<p><input type="submit" name="submit"></p>
 			</div>
 		</form>
 	</body>
