updated assignment page, begun shopping cart

--- a/web/assignments.html
+++ b/web/assignments.html
@@ -8,6 +8,22 @@
 		<div>
 			<h1>Assignments</h1>
 		</div>
-		<h2>Coming soon!</h2>
+		<div class="dropdown">
+			<button class="dropButton">Team Activities</button>
+			<div class="contents">
+				<a href="hello.php">Week 01</a>
+				<a href="teamActivity02.php">Week 02</a>
+				<a href="teamActivity03.php">Week 03</a>
+			</div>
+		</div>
+		<div class="dropdown">
+			<button class="dropButton">Prove Assignments</button>
+			<div class="contents">
+				<a href="hello.php">Week 01</a>
+				<a href="home.php">Week 02</a>
+				<a href="browseItems.php">Week 03</a>
+			</div>
+		</div>
+		<script src="home.js"></script>
 	</body>
 </html>
