--- a/web/teamActivity03.html
+++ b/web/teamActivity03.html
@@ -4,7 +4,7 @@
 		<title>Team Activity 03</title>
 	</head>
 	<body>
-		<form action="teamActivity03.php" method="post">
+		<form action="teamActivity03-2.php" method="post">
 			<div>
 				<p>Name: <input type="text" name="name"></p>
 				<p>Email: <input type="email" name="emailAddress"></p>
