added items to browseItems

--- a/web/assignments.html
+++ b/web/assignments.html
@@ -5,23 +5,20 @@
 		<link rel="stylesheet" type="text/css" href="mainStyle.css"/>
 	</head>
 	<body>
-		<div>
 			<h1>Assignments</h1>
+		<div class="dropdown">
+			<button class="dropButton">Prove Assignments</button>
+			<div class="contents">
+				<p><a class="assign" href="hello.php">Week 01</a></p>
+				<p><a class="assign" href="index.php">Week 02</a></p>
+				<p><a class="assign" href="browseItems.php">Week 03</a></p>
+			</div>
 		</div>
 		<div class="dropdown">
 			<button class="dropButton">Team Activities</button>
 			<div class="contents">
-				<a href="hello.php">Week 01</a>
-				<a href="teamActivity02.php">Week 02</a>
-				<a href="teamActivity03.php">Week 03</a>
-			</div>
-		</div>
-		<div class="dropdown">
-			<button class="dropButton">Prove Assignments</button>
-			<div class="contents">
-				<a href="hello.php">Week 01</a>
-				<a href="home.php">Week 02</a>
-				<a href="browseItems.php">Week 03</a>
+				<p><a class="assign" href="teamActivity02.php">Week 02</a></p>
+				<p><a class="assign" href="teamActivity03.php">Week 03</a></p>
 			</div>
 		</div>
 		<script src="home.js"></script>
