--- a/web/browseItems.html
+++ b/web/browseItems.html
@@ -6,5 +6,18 @@
 	</head>
 	<body>
 		<h1>Browse Items</h1>
+		<form action="viewCart.php" method="post">
+			<img src="ZERE-0100_200.jpg"><input class="radioCheck" type="checkbox" name="items[]"><p>Armchair</p>
+			<img src="ZHRN-0200_200.jpg"><input class="radioCheck" type="checkbox" name="items[]"><p>Loveseat</p>
+			<img src="ZGVA-0300_200.jpg"><input class="radioCheck" type="checkbox" name="items[]"><p>Couch</p>
+			<img src="NH1202_200.jpg"><input class="radioCheck" type="checkbox" name="items[]"><p>TV corner cart</p>
+			<img src="SK3204_200.jpg"><input class="radioCheck" type="checkbox" name="items[]"><p>Entertainment wall</p>
+			<img src="JC6270_200.jpg"><input class="radioCheck" type="checkbox" name="items[]"><p>Desk</p>
+			<img src="CC6672_200.jpg"><input class="radioCheck" type="checkbox" name="items[]"><p>Bookshelf</p>
+			<img src="ZLPK-7013,7014_200.jpg"><input class="radioCheck" type="checkbox" name="items[]"><p>Vanity</p>
+			<img src="ZMTN-7004,7005,7003_200.jpg"><input class="radioCheck" type="checkbox" name="items[]"><p>Bed</p>
+			<img src="ZTGO-8060_200.jpg"><input class="radioCheck" type="checkbox" name="items[]"><p>Table</p>
+			<p><input class="submit" type="submit" name="submit"></p>
+		</form>
 	</body>
 </html>
