Maybe this time?

--- a/web/browseItems.html
+++ b/web/browseItems.html
@@ -15,7 +15,7 @@
 			<img src="JC6270_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Desk"><p>Desk</p>
 			<img src="CC6672_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Bookshelf"><p>Bookshelf</p>
 			<img src="ZLPK-7013,7014_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Vanity"><p>Vanity</p>
-			<img src="ZMTN-7004,7005,7003_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Bed<"><p>Bed</p>
+			<img src="ZMTN-7004,7005,7003_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Bed"><p>Bed</p>
 			<img src="ZTGO-8060_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Table"><p>Table</p>
 			<p><input class="submit" type="submit" name="submit"></p>
 		</form>
