testing session functionality

--- a/web/browseItems.html
+++ b/web/browseItems.html
@@ -7,16 +7,16 @@
 	<body>
 		<h1>Browse Items</h1>
 		<form action="viewCart.php" method="post">
-			<img src="ZERE-0100_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Armchair"><p>Armchair</p>
-			<img src="ZHRN-0200_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Loveseat"><p>Loveseat</p>
-			<img src="ZGVA-0300_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Couch"><p>Couch</p>
-			<img src="NH1202_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="TV corner cart"><p>TV corner cart</p>
-			<img src="SK3204_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Entertainment wall"><p>Entertainment wall</p>
-			<img src="JC6270_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Desk"><p>Desk</p>
-			<img src="CC6672_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Bookshelf"><p>Bookshelf</p>
-			<img src="ZLPK-7013,7014_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Vanity"><p>Vanity</p>
-			<img src="ZMTN-7004,7005,7003_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Bed"><p>Bed</p>
-			<img src="ZTGO-8060_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Table"><p>Table</p>
+			<img src="ZERE-0100_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Armchair">
+			<img src="ZHRN-0200_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Loveseat">
+			<img src="ZGVA-0300_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Couch">
+			<img src="NH1202_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="TV corner cart">
+			<img src="SK3204_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Entertainment wall">
+			<img src="JC6270_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Desk">
+			<img src="CC6672_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Bookshelf">
+			<img src="ZLPK-7013,7014_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Vanity">
+			<img src="ZMTN-7004,7005,7003_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Bed">
+			<img src="ZTGO-8060_200.jpg"><input class="radioCheck" type="checkbox" name="items[]" value="Table">
 			<p><input class="submit" type="submit" name="submit"></p>
 		</form>
 	</body>
