--- a/web/assignments.html
+++ b/web/assignments.html
@@ -12,6 +12,7 @@
 				<p><a class="assign" href="hello.php">Week 01</a></p>
 				<p><a class="assign" href="index.php">Week 02</a></p>
 				<p><a class="assign" href="browseItems.php">Week 03</a></p>
+				<p><a class="assign" href="dataAccess.php">Week 05</a></p>
 			</div>
 		</div>
 		<div class="dropdown">
