--- a/web/header.html
+++ b/web/header.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="mainStyle.css"/>
+		<link rel="icon" href="logo.svg" type="image/svg+xml" sizes="any">
 	</head>
 	<body>
 		<a href="index.php">
