--- a/web/home.html
+++ b/web/home.html
@@ -21,7 +21,7 @@
 			<button class="dropButton">My family</button>
 			<div class="contents">
 				<p>My famiy consists of my father and mother, myself, my younger brothers Isaac and Ethan, and my little sister Elena.</p>
-				<p>Both my parents served in the Spain Bilbao Mission and studied at BYU. My mother earned a master's degree at Colorado State University.</p>
+				<p>Both my parents served in the Spain Bilbao Mission and studied in Provo, Utah. My father studied and graduated at BYU. My mother began at UVCC (now UVU) earned a master's degree at Colorado State University.</p>
 				<p>Isaac served in the Germany Berlin Mission, is currently studying at BYU-Idaho, and is married to a wonderful red-head named Bailey.</p>
 				<p>Ethan recently returned from the Washington Kennewick Mission and is now studying at BYU.</p>
 				<p>Elena is the only child in our family to have been home-schooled. She became a Young Woman at the start of the Church's new youth program.</p>
