--- a/web/back.html
+++ b/web/back.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<div class="fittedDiv"><a href="dataAccess.php">Back</a></div><br>
+		<div class="fittedDiv"><a href="furnitureZone.php">Back</a></div><br>
 	</body>
 </html>
