--- a/web/assignments.html
+++ b/web/assignments.html
@@ -20,7 +20,7 @@
 			<div class="contents">
 				<p><a class="assign" href="teamActivity02.php">Week 02</a></p>
 				<p><a class="assign" href="teamActivity03.php">Week 03</a></p>
-				<p><a class="assign" href="teamActivity07.php-signup">Week 07</a></p>
+				<p><a class="assign" href="teamActivity07-signup.php">Week 07</a></p>
 			</div>
 		</div>
 		<script src="home.js"></script>
